--- a/ngxs-angular-store-example/src/app/listar-posts/listar-posts.component.html
+++ b/ngxs-angular-store-example/src/app/listar-posts/listar-posts.component.html
@@ -1,1 +1,18 @@
-<p>listar-posts works!</p>
+<ul>
+  <li *ngFor="let post of posts | async">
+    <div class="card">
+      <div class="card-content">
+        <p class="id">
+          <small>ID: {{ post.id }}</small>
+        </p>
+        <p>{{ post.text }}</p>
+        <a class="button is-danger is-small" (click)="removePost(post.id)"
+          >Eliminar</a
+        >
+      </div>
+    </div>
+  </li>
+</ul>
+<div class="notification is-danger" *ngIf="(posts | async).length == 0">
+  Sin Posts :(
+</div>
