--- a/ngxs-angular-store-example/src/app/nuevo-post/nuevo-post.component.html
+++ b/ngxs-angular-store-example/src/app/nuevo-post/nuevo-post.component.html
@@ -1,1 +1,2 @@
-<p>nuevo-post works!</p>
+<textarea class="textarea" [(ngModel)]="text"></textarea>
+<button class="button" (click)="addPost()">Agregar</button>
